 * Fixed most issues in render views resolving #3416, #3417
 * Added the 'local tree' view back into subject browsing.
 * Tidied up the main tables on Items and Review
 * Added "help" rollup to Items and Review to resolve #3418
 * Fixed an "undef" warning in MetaField::Date
 * Started to clean up email for alerts. Still not quite there, but better.
    SHould resolve #3405
 * Fixed issue with the mf dataset crashing when an item is created.
 * Tweak to plugin loader to supress an overzelous warning about a variable
    only being used once.
 * Cleaned up some bugs in "Box" when Javascript was turned off.
 * A couple of new options to Box::render to allow it to override the [+] 
    and [-] icons.
 * EPrint/Staff/Details should now use STAFFONLY workflow, fixing #3411
 * Changed default views to allow null values and so subjects does not have
    a sub-field. 
 * Fixed typo in epadmin --help

2008-08-06 tdb
 * Removing all Admin-configured fields will also remove the 'Misc.' stage,
    fixing 3415
 * Don't dispose scalars returned by Export->export, fixing #3420
 * Escape arguments in Repository::invocation

2008-08-06 cjg
 * Added "permute" option to all bin scripts to allow --verbose etc. to be
    added on the end.
 * Changed -c in gunzip to the first argument in import test data -- this 
    stops a bug which shows up in POSIX compliant mode.

2008-08-07 tdb
 * Added "page" to Session::get_url/URL::get_url
 * Added Plugin::icon_url and Screen::action_icon_url methods
 * Use ->icon_url and ->action_icon_url to get icon URLs, fixing #3354

2008-08-08 tdb
 * OAI now searches for the eprint in archive or deletion, fixing #3424
 * OAI GetRecord no longer errors on an invalid identifier, fixing #3423
 * get_object()/DataObj::new will no longer return eprints from any dataset

2008-08-11 tdb
 * Indexer should now stop if asked to stop while busy
 * Removed redundant indexer control code
 * Modified Status/Admin plugins to use Index::Daemon
